Added to doc and began updates to assumptions that inform power analysis

--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -148,7 +148,8 @@
 \maketitle
 
 \begin{abstract}
-A recent, bipartisan concern in Congress is the need for more evidence-based policy-making. We propose a field experiment's idea to test whether legislators are capable of rising up to their own intentions and goals. Are policy-makers really more receptive to higher causal evidence standards when receiving policy-information? And even if they want to be, do they have sufficient knowledge of evidence standards to be able to differentiate between different levels of information? This pre-analysis plan lays out initial details for an experimental design dedicated to answering these questions. We include a power analysis based on these still preliminary details. 
+\noindent
+The bipartisan Foundations for Evidence-Based Policymaking Act of 2018 stresses the need for evidence-based policy-making. We propose a field experiment that tests whether legislators are in actuality more receptive to higher standards of evidence in research when receiving policy-information. A related question is if legislators possess sufficient knowledge of evidence standards to be able to differentiate between varying standards of research quality. This pre-analysis plan proposes a field-experimental research design dedicated to answering these questions, and pre-registers the procedures that will be used to conduct this analysis.
 \end{abstract}
 
 \pagebreak
@@ -161,9 +162,9 @@ A recent, bipartisan concern in Congress is the need for more evidence-based pol
 
 \section{Introduction} \label{sec:Introduction}
 
-The need for more evidence-based policy-making is the object of a rare bipartisan agreement. Congress passed the Foundations for Evidence-Based Policymaking Act in 2018 - legislation sponsored by then-House Speaker Paul Ryan (R-WI) and Senator Patty Murray (D-WA). Only 17 representatives voted against, and it passed the Senate by Unanimous consent. Policy-makers' intentions are clear, but do their behaviors and knowledge align with those intentions? Are policy-makers really more receptive to higher standards of evidence when evaluating policy-information? Moreover, even if policymakers want to adopt policies based on high-quality evidence, do they have sufficient knowledge of evidence standards to be able to differentiate between research of varying quality? 
+The need for more evidence-based policy-making is the object of a rare bipartisan agreement. Congress passed the Foundations for Evidence-Based Policymaking Act in 2018 - legislation sponsored by then-House Speaker Paul Ryan (R-WI) and Senator Patty Murray (D-WA). Only 17 representatives voted against, and it passed the Senate by unanimous consent. Policy-makers' intentions are clear, but do their behaviors and knowledge align with those intentions? Are policy-makers really more receptive to higher standards of evidence when evaluating policy-information? Moreover, even if policymakers want to adopt policies based on high-quality evidence, do they have sufficient knowledge of evidence standards to be able to differentiate between research of varying quality? 
 
-We therefore propose to use a field experiment to test: (1) whether policymakers give more credence to high quality research, and (2) if policymakers can recognize differences in research quality. Our research design would entail contacting policy-makers with information regarding research on a potential educational policy while randomizing the kind of research design from which study derives its evidence - from a simple regression to a well-conducted RCT. We would also randomize whether we provide the policy-maker with information about varying standards of evidence within academic research (e.g. informing them that an RCT is considered the gold standard in causal inference and policy evaluation studies). 
+We propose a field experiment to test: (1) whether policymakers give more credence to high quality research, and (2) if policymakers can recognize differences in research quality. Our research design would entail contacting policy-makers with information regarding research on a potential educational policy while randomizing the kind of research design from which study derives its evidence - from a simple regression to a well-conducted RCT. We would also randomize whether we provide the policy-maker with information about varying standards of evidence within academic research (e.g. informing them that an RCT is considered the gold standard in causal inference and policy evaluation studies). 
 
 Our pre-analysis first presents the theory and existing literature we hope to advance. In particular, we hope to build on existing experimental studies that have contacted American policy-makers. Next, we present the details of our proposed experimental design: treatment (choice of policy and evidence standard), logistics (partnership with a 3rd party organization), outcome measures, and ethical considerations. These details on the design are still preliminary, and several open questions remain. We conclude with a power analysis for the proposed experiment.
 
@@ -179,7 +180,7 @@ Depending on what and who the source of the information ends up being in the exp
 
 \subsection{Legislator contact experiments}  \label{sec: contact experiments}
 
-Randomized contact of legislators in American politics research remains relatively rare. \autoref{tab:audit_experiments} below summarizes previous studies. Our design resembles a mix of the experiments conducted by \citet{butler2011politicians} and \citet{kalla2016campaign}. Our factorial design will come close to \citet{butler2011politicians}'s 2x3 design (and may use their contact list for state legislatures). We also plan to emulate \citet{kalla2016campaign}'s use of a third party organization to contact legislators, as well as their more nuanced outcome measure: both rate of response to emails and the seniority of the person who has agreed to meet with the organization. The use of roll call votes as in \citet{bergan2009does} is likely only possible for an experiment that targets one bill in one Chamber. 
+Randomized contact of legislators in American politics research remains relatively rare. \autoref{tab:audit_experiments} below summarizes previous studies. Our design most closely resembles a mix of the experiments conducted by \citet{butler2011politicians} and \citet{kalla2016campaign}. Our factorial design will come close to \citet{butler2011politicians}'s 2x3 design (and may use their contact list for state legislatures). We also plan to emulate \citet{kalla2016campaign}'s use of a third party organization to contact legislators, as well as their more nuanced outcome measure: both rate of response to emails and the seniority of the person who has agreed to meet with the organization. The use of roll call votes as in \citet{bergan2009does} is likely only possible for an experiment that targets one bill in one Chamber. 
 
 To our knowledge, no similar audit experiment has attempted to contact bureaucrats. This is not surprising: contact is common for legislative offices -  part of a legislator's job (and incentives) is to listen to constituents and interest groups. Contact of bureaucrats is less common. Such outreach would therefore require a highly credible source and motive.\footnote{Bureaucrats likely would not respond to advocacy groups, but may be more amenable to meeting with research-oriented and/or institutional sources.} We are aware of these challenges and therefore focus on legislator contact. However, we are aware that policy adoption often flows through bureaucratic agencies and therefore posit that bureaucratic knowledge of research quality is also of substantive interest. This therefore remains an important avenue of inquiry.
 
@@ -203,9 +204,9 @@ Reference
 & \begin{tabular}[c]{@{}l@{}}Yes: coalition of \\ public health-related groups\\  organizing a grassroots email \\ lobbying campaign by activists\end{tabular}                                                                                              
   \\ \hline
  \citet{butler2011politicians}       & \begin{tabular}[c]{@{}l@{}}4,859 state legislators\\ (44 states)\end{tabular}                                                        & 2x3          & \begin{tabular}[c]{@{}l@{}}Black or \\ white name and\\ party (D/R/blank)\\ of email sender\end{tabular}            & \begin{tabular}[c]{@{}l@{}}Block randomization\\ by state, chamber, \\ party, and whether\\ legislator is up for \\ reelection\end{tabular}                   & \begin{tabular}[c]{@{}l@{}}Rate of response\\ to emails\end{tabular}                                       & No                                                                                                                                                                                                                                                          \\ \hline
- \citet{kalla2016campaign}     & \begin{tabular}[c]{@{}l@{}}US Congress (191 offices)\\ These were the offices \\ that had not sponsored the \\ bill yet\end{tabular} & 1            & \begin{tabular}[c]{@{}l@{}}Reveal in email that\\ prospective attendees had\\ contributed to campaigns\end{tabular} & \begin{tabular}[c]{@{}l@{}}Blocks of 3 offices: closest\\ similarity on multiple \\ covariates\\ 1 treated, 2 control in each\\ of the 64 blocks\end{tabular} & \begin{tabular}[c]{@{}l@{}}Rate of response\\ to emails and\\ seniority of proposed\\ meeting\end{tabular} & \begin{tabular}[c]{@{}l@{}}Yes: liberal political organization \\ trying to set meetings between offices\\ and constituents who had previously \\ given to campaigns. \\ Goal of the meetings: rally support for \\ a bill banning a chemical.\end{tabular} 
+ \citet{kalla2016campaign}     & \begin{tabular}[c]{@{}l@{}}US Congress \\ 191 offices that had \\ not yet sponsored bill \end{tabular} & 1            & \begin{tabular}[c]{@{}l@{}}Reveal in email that\\ prospective attendees had\\ contributed to campaigns\end{tabular} & \begin{tabular}[c]{@{}l@{}}Blocks of 3 offices: closest\\ similarity on multiple \\ covariates\\ 1 treated, 2 control in each\\ of the 64 blocks\end{tabular} & \begin{tabular}[c]{@{}l@{}}Rate of response\\ to emails and\\ seniority of proposed\\ meeting\end{tabular} & \begin{tabular}[c]{@{}l@{}}Yes: liberal political organization \\ trying to set meetings between offices\\ and constituents who had previously \\ given to campaigns. \\ Goal of the meetings: rally support for \\ a bill banning a chemical.\end{tabular} 
  \\ \hline
-  \citet{doberstein2017whom}     & \begin{tabular}[c]{@{}l@{}}1,108 Canadian bureaucrats\end{tabular} & 2x2           & \begin{tabular}[c]{@{}l@{}}Source of the\\ policy information \\(academic, think tanks, \\ research-based \\advocacy groups) \end{tabular} & \begin{tabular}[c]{@{}l@{}}Sources in \\treatment groups \\ were falsified \\  Pre treatment survey\\ for covariates \end{tabular} & \begin{tabular}[c]{@{}l@{}} Credibility assessment of \\each of 5 research articles \\ Based on summaries \\ And ranking of the 5 articles \end{tabular} & \begin{tabular}[c]{@{}l@{}}No.\end{tabular} 
+  \citet{doberstein2017whom}     & \begin{tabular}[c]{@{}l@{}}1,108 \\ Canadian bureaucrats\end{tabular} & 2x2           & \begin{tabular}[c]{@{}l@{}}Source of the\\ policy information \\(academic, think tanks, \\ research-based \\advocacy groups) \end{tabular} & \begin{tabular}[c]{@{}l@{}}Sources in \\treatment groups \\ were falsified \\  Pre treatment survey\\ for covariates \end{tabular} & \begin{tabular}[c]{@{}l@{}} Credibility assessment of \\each of 5 research articles \\ Based on summaries \\ And ranking of the 5 articles \end{tabular} & \begin{tabular}[c]{@{}l@{}}No.\end{tabular} 
    \\ \hline
   \citet{zelizer2018responsive}     & \begin{tabular}[c]{@{}l@{}}18 bills \\ 76 state legislators \end{tabular} & 1          & \begin{tabular}[c]{@{}l@{}}Assigned to in-person\\ briefings by a \\ committee staffer \end{tabular} & \begin{tabular}[c]{@{}l@{}}Treatment assigned \\ at legislator-bill \\ dyad level \\ block RA \end{tabular} & \begin{tabular}[c]{@{}l@{}} Cosponsorship of bills \\ Roll-call votes \end{tabular} & \begin{tabular}[c]{@{}l@{}}No.\end{tabular} 
      \\ \hline
@@ -217,14 +218,18 @@ Reference
 \end{sidewaystable}
 
 
-\section{Design} \label{sec:Design}
+\section{Experimental design} \label{sec:Design}
 
-\subsection{Treatment: a factorial design} \label{sec:Treatment}
-We would reach out to policy-makers and provide them with information on a new policy finding coming from a study. We would have a 2x4 factorial design with two treatments: (i) the evidence standard used in the study (low, middle, high, qualitative) and (ii) whether we add a paragraph explaining the evidence standards and what they mean. Table 2 synthesizes our treatment arms. We give more details about the type of evidence standards and policies we would use in the following paragraphs. 
+\subsection{Treatment groups and randomization} \label{sec:Treatment}
+
+Policy-makers will be contacted and provided with information on findings from a policy study. This will take the form of a 2x4 factorial design with two treatments: (i) the evidence standard used in the study (low, middle, high, qualitative) and (ii) whether we provide policy-makers with information explaining the evidence standards. \autoref{tab: arms} synthesizes our treatment arms. Additional details regarding the types of evidence standards and policies included in each arm are described in \nameref{sec:Evidence} below. 
+
+Given the small sample size inherent in any study using a sample of legislators, we will conduct block random assignment based upon a vector of pre-treatment covariates in order to increase the precision of our treatment effect estimates. In other words, legislators will be divided into blocks based on these pre-treatment covariates, then will be randomly assigned to a treatment condition within each block. Which treatment arm (i.e. form of contact) a policy-maker receives will be randomized using complete random assignment, and will in practice be conducted using the ``complete\_ra'' function in the R package \textit{randomizr} (part of the \textit{DeclareDesign} suite).
 
 \begin{table}[H]
 \centering
-\caption{2x4 factorial design}
+\caption{Treatment arms: 2x4 factorial design}
+\label{tab: arms} 
 \bigbreak
 \begin{tabular}{|l|l|l|l|l|}
 \hline
@@ -236,14 +241,15 @@ Information    & ATE 4       & ATE 5        & ATE 6        & ATE 7             \
 
 \subsection{Evidence standards} \label{sec:Evidence}
 
-For evidence standards and their descriptions, we can rely on evidence standards already set in some laws and used by the Department of Education (DoE) and Department of Labor (DoL). The DoL has three tiers of evidence: high causal evidence (mostly RCTs), moderate causal evidence (strong non-experimental designs or RCTs with high attrition) or low causal evidence studies. The DoE has similar standards (cf. table Appendix A). The upside of using these standards is obvious: they are used in real life policy-making, the definitions exist and are clearly specified in laws and implementation texts, and they are associated with specific projects and studies (see below). One downside is that they probably mean restricting the experiment to quantitative studies \footnote{We have not yet looked at the databased and associated studies. We doubt it, but it is possible that qualitative studies are already incorporated into the databases and one of the 3 evidence standards}. We will need to think about whether we want to add qualitative studies as an additional category. We will also need to check whether qualitative studies are used in the DoE and DoL databases, and if yes, under which tier of evidence (this would reduce our design to a 2x3). 
+We rely on evidence standards and descriptions already adopted in some laws \textcolor{red}{[CLARIFY]} and used by the Department of Education (DoE) and Department of Labor (DoL). The DoL defines three tiers of evidence: high causal evidence (primarily RCTs), moderate causal evidence (strong non-experimental designs or RCTs with high attrition) or low causal evidence studies (\textcolor{red}{[CLARIFY]}). The DoE has adopted similar standards (see \autoref{sec: DoE}). 
+
+We use these standards because they are ostensibly used in actual policy-making decisions. These definitions already exist, are specified in law and implementation texts, and have been referenced in previous projects and studies (see below). One downside of this approach is that it may require us to restrict ourselves to quantitative studies.\footnote{We have not yet looked at the databased and associated studies. We doubt it, but it is possible that qualitative studies are already incorporated into the databases and one of the 3 evidence standards} We will need to think about whether we want to add qualitative studies as an additional category. We will also need to check whether qualitative studies are used in the DoE and DoL databases, and if yes, under which tier of evidence (this would reduce our design to a 2x3). 
 
 \subsection{Choice of policy} \label{sec: Policy}
 
 The policy and specific findings we will report on are yet to be determined. Ideally, we would use similar findings coming from 3 or 4 studies belonging to different tiers of evidence. The DoE and DoL each have comprehensive databases of most studies conducted in their respective policy areas, their findings and the evidence tier to which they belong. We can leverage these existing databases (What Works Clearing House for the DoE, CLEAR for the DoL) in order to find studies we can use in our experiment. 
-\bigbreak
-We would work with the IRB to determine what we can or cannot do. We will probably need to find 3 or 4 studies that reach similar results with different methods (and if the results are not perfectly similar, they need to be close enough for us to be able to use the same one-sentence presentation of them in our emails without any deception on our part). Depending on the studies that we find, we might need to be more or less specific in the formulation of the results in our email (it could be anything from a very broad result such as 'small classes are better' to more specific results such as 'adding curriculum x to classes y raises z'). The results would also ideally need to be somewhat surprising, or at least new, in order to maximize the level of new information we are bringing, and raise the interest in and incentives of meeting with us.
 
+For ethical reasons we will need to locate studies that reach similar results using different methods (ethics are considered in more detail in the \nameref{sec:Ethics} section below). More specifically, the results of the studies will need to be similar enough to use the same one-sentence summaries in our messages without resorting to deception. Depending on the studies that we find, we might need to be more or less specific in the formulation of the results in our email (it could be anything from a very broad result such as 'small classes are better' to more specific results such as 'adding curriculum x to classes y raises z'). Ideally, the results would also be surprising or new, in order to both maximize the level of new information we are providing, as well as to raise the incentives of meeting with an organization regarding the results. For example, providing policymakers with information regarding an educational policy that has already been adopted would be ignored for reasons unrelated to the content of the randomized treatments. 
 
 \subsection{Outcomes} \label{sec: Outcomes}
 What outcomes we would measure and how is still an open question. The more realistic solution would be to measure response rates to our email. If we are more ambitious and partner with a 3rd party organization, we could ask to set meetings and use the seniority of whoever we get a meeting with as another measure of the importance given to our approach. The model for this would be \citet{kalla2016campaign}. If we actually set meetings (through a third-party organization), more qualitative observations of policy-makers? understanding of and responsiveness to evidence standards could be gathered. 
@@ -256,12 +262,21 @@ The source of the email will be important, and has yet to be determined. In orde
 
 Conducting the experiment at the federal level would be substantially interesting (we are using recent initiatives happening at the federal level as motivations for this project). It might also be logistically easier to organise and attend meetings. But we might end up conducting it at the State or more local levels, for multiple reasons. First, we might encounter power issues if we have multiple treatment arms and a fixed N of 535. Second, only two policy areas have existing, well-defined evidence standards and associated studies (cf. below): education and labor policies. Depending on which specific policy we end up choosing, it might make substantially more sense to conduct the experiment at the local and state level. Third, it might be more realistic and easier to set meetings with legislators at the local level. Finally, there is a substantive interest as to whether state and local politics can help compensate for the shortcomings of the federal level, both in terms of quantity (gridlock) and quality (less polarized, more time to act). 
 
+\section{Experimental analysis} \label{sec:analysis}
+
+\subsection{Estimation of treatment effects} \label{sec:treatment_effects}
+
+
 
 \section{Ethical considerations} \label{sec:Ethics}
 
 
 
 \section{Power Analysis} \label{sec:Power}
+
+We perform a power analysis in order to estimate the maximum number of treatment groups that may be advisable to include in the experiment given sample size and budgetary constraints. Preliminary power analyses are depicted below, and derive their assumptions regarding hypothetical response rates and treatment effect sizes from \citet{kalla2016campaign}.
+
+The first power analysis assumes a sample size of 535 respondents (i.e. the number of representatives in the US Congress). In \citet{kalla2016campaign}, congressional offices granted meetings in response to requests roughly 50\% of the time. However, as the organizations requesting meetings were political donors (whether revealed or not), we believe that such a success rate may be unreasonably high, and therefore conduct our power analysis assuming a more conservative 30\% of offices will grant meetings.
 
 
 \section{Conclusion} \label{sec:Conclusion}
@@ -273,8 +288,14 @@ Conducting the experiment at the federal level would be substantially interestin
 
 \pagebreak
 
-\section{Appendix A: Department of Education's Evidence tiers} \label{sec: DoE}
+\appendix
+\setcounter{table}{0}
+\setcounter{figure}{0}
+\renewcommand\thetable{\Alph{section}.\arabic{table}}
+\renewcommand\thefigure{\Alph{section}.\arabic{figure}}
+\section{Appendix} \label{Appendix}
 
+\subsection{Department of Education evidence tiers} \label{sec: DoE}
 
 
 \end{document} 
