--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -180,9 +180,9 @@ Depending on what and who the source of the information ends up being in the exp
 
 \subsection{Legislator contact experiments}  \label{sec: contact experiments}
 
-Randomized contact of legislators in American politics research remains relatively rare. \autoref{tab:audit_experiments} below summarizes previous studies. Our design most closely resembles a mix of the experiments conducted by \citet{butler2011politicians} and \citet{kalla2016campaign}. Our factorial design will come close to \citet{butler2011politicians}'s 2x3 design (and may use their contact list for state legislatures). We also plan to emulate \citet{kalla2016campaign}'s use of a third party organization to contact legislators, as well as their more nuanced outcome measure: both rate of response to emails and the seniority of the person who has agreed to meet with the organization. The use of roll call votes as in \citet{bergan2009does} is likely only possible for an experiment that targets one bill in one Chamber. 
+Randomized contact of legislators in American politics research remains relatively rare. \autoref{tab:audit_experiments} below summarizes previous studies. Our design most closely resembles a mix of the experiments conducted by \citet{butler2011politicians} and \citet{kalla2016campaign}. Our factorial design will come close to \citet{butler2011politicians}'s 2x3 design (and may use their contact list for state legislatures). We also plan to emulate \citet{kalla2016campaign}'s use of a third party organization to contact legislators, as well as their more nuanced outcome measure: both rate of response to emails and the seniority of the person who has agreed to meet with the organization. The use of roll call votes as in \citet{bergan2009does} is likely only possible for an experiment that targets one bill in one Chamber. Roll call votes is not a realistic outcome measure in our case: even if we were to reach out with policy information on a specific bill, too much would happen between us reaching out and the MC eventual vote for us to be able to isolate the effect of us reaching out. 
 
-To our knowledge, no similar audit experiment has attempted to contact bureaucrats. This is not surprising: contact is common for legislative offices -  part of a legislator's job (and incentives) is to listen to constituents and interest groups. Contact of bureaucrats is less common. Such outreach would therefore require a highly credible source and motive.\footnote{Bureaucrats likely would not respond to advocacy groups, but may be more amenable to meeting with research-oriented and/or institutional sources.} We are aware of these challenges and therefore focus on legislator contact. However, we are aware that policy adoption often flows through bureaucratic agencies and therefore posit that bureaucratic knowledge of research quality is also of substantive interest. This therefore remains an important avenue of inquiry.
+
 
 
 \begin{sidewaystable}[]
@@ -222,28 +222,28 @@ Reference
 
 \subsection{Treatment groups and randomization} \label{sec:Treatment}
 
-Policy-makers will be contacted and provided with information on findings from a policy study. This will take the form of a 2x4 factorial design with two treatments: (i) the evidence standard used in the study (low, middle, high, qualitative) and (ii) whether we provide policy-makers with information explaining the evidence standards. \autoref{tab: arms} synthesizes our treatment arms. Additional details regarding the types of evidence standards and policies included in each arm are described in \nameref{sec:Evidence} below. 
+Policy-makers will be contacted and provided with information on findings from a policy study. This will take the form of a 2x2 factorial design with two treatments: (i) the evidence standard used in the study (low vs high) and (ii) whether we provide policy-makers with information explaining the evidence standards. \autoref{tab: arms} synthesizes our treatment arms. Additional details regarding the types of evidence standards and policies included in each arm are described in \nameref{sec:Evidence} below. 
 
-Given the small sample size inherent in any study using a sample of legislators, we will conduct block random assignment based upon a vector of pre-treatment covariates in order to increase the precision of our treatment effect estimates. In other words, legislators will be divided into blocks based on these pre-treatment covariates, then will be randomly assigned to a treatment condition within each block. Which treatment arm (i.e. form of contact) a policy-maker receives will be randomized using complete random assignment, and will in practice be conducted using the ``complete\_ra'' function in the R package \textit{randomizr} (part of the \textit{DeclareDesign} suite).
+Given the small sample size inherent in any study using a sample of legislators, we will conduct block random assignment based upon a vector of pre-treatment covariates in order to increase the precision of our treatment effect estimates. Examples of pre-treatment covariates that can be used to create the blocks would be party, chamber, education level of the legislator (if data is available), closeness of the district, state, etc. In other words, legislators will be divided into blocks based on these pre-treatment covariates, then will be randomly assigned to a treatment condition within each block. Which treatment arm (i.e. form of contact) a policy-maker receives will be randomized using complete random assignment, and will in practice be conducted using the ``complete\_ra'' function in the R package \textit{randomizr} (part of the \textit{DeclareDesign} suite).
 
 \begin{table}[H]
 \centering
-\caption{Treatment arms: 2x4 factorial design}
+\caption{Treatment arms: 2x2 factorial design}
 \label{tab: arms} 
 \bigbreak
 \begin{tabular}{|l|l|l|l|l|}
 \hline
-               & Lower Tier & Middle Tier & Higher Tier & Qual studies      \\ \hline
-No information & Control    & ATE 1        & ATE 2        & ATE 3             \\ \hline
-Information    & ATE 4       & ATE 5        & ATE 6        & ATE 7             \\ \hline
+&Lower Tier & Higher Tier           \\ \hline
+No information & Control    &  High and no info           \\ \hline
+Information    & Low and info       &  High and info              \\ \hline
 \end{tabular}
 \end{table}
 
 \subsection{Evidence standards} \label{sec:Evidence}
 
-We rely on evidence standards and descriptions already adopted in some laws \textcolor{red}{[CLARIFY]} and used by the Department of Education (DoE) and Department of Labor (DoL). The DoL defines three tiers of evidence: high causal evidence (primarily RCTs), moderate causal evidence (strong non-experimental designs or RCTs with high attrition) or low causal evidence studies (\textcolor{red}{[CLARIFY]}). The DoE has adopted similar standards (see \autoref{sec: DoE}). 
+We rely on evidence standards and descriptions already adopted in some laws (Elementary and Secondary Education Act - ESEA 65, No Child Left Behind - NCLB 01, Every Student Succeeds Act - ESSA 15) and used by the Department of Education (DoE) and Department of Labor (DoL). The DoL defines three tiers of evidence: high causal evidence (primarily RCTs), moderate causal evidence (strong non-experimental designs or RCTs with high attrition) or low causal evidence studies. The DOL defines the low causal studies as studies that do not meet criteria for a high or moderate evidence rating. Those studies, according to the DoL, show little evidence that the effects estimated in the study are attributable to the intervention being examined, and other factors are likely to have contributed to the results. They should be interpreted with caution. The DoE has adopted similar standards (see \autoref{sec: DoE}). 
 
-We use these standards because they are ostensibly used in actual policy-making decisions. These definitions already exist, are specified in law and implementation texts, and have been referenced in previous projects and studies (see below). One downside of this approach is that it may require us to restrict ourselves to quantitative studies.\footnote{We have not yet looked at the databased and associated studies. We doubt it, but it is possible that qualitative studies are already incorporated into the databases and one of the 3 evidence standards} We will need to think about whether we want to add qualitative studies as an additional category. We will also need to check whether qualitative studies are used in the DoE and DoL databases, and if yes, under which tier of evidence (this would reduce our design to a 2x3). 
+We use these standards because they are ostensibly used in actual policy-making decisions. These definitions already exist, are specified in law and implementation texts, and have been referenced in previous projects and studies (see below). For simplicity sake, statistical power reasons as well as substantive interest, we will focus on the studies from the higher tier of evidence and those from the lowest tier. This will keep our factorial design to a manageable 2x2 design. One downside of this approach is that it may require us to restrict ourselves to quantitative studies.\footnote{We have not yet looked at the databased and associated studies. We doubt it, but it is possible that qualitative studies are already incorporated into the databases and one of the 3 evidence standards} We will need to think about whether we want to add qualitative studies as an additional category. We will also need to check whether qualitative studies are used in the DoE and DoL databases, and if yes, under which tier of evidence. 
 
 \subsection{Choice of policy} \label{sec: Policy}
 
@@ -260,7 +260,7 @@ The source of the email will be important, and has yet to be determined. In orde
 
 \subsection{Federal or state level?} \label{sec: Level}
 
-Conducting the experiment at the federal level would be substantially interesting (we are using recent initiatives happening at the federal level as motivations for this project). It might also be logistically easier to organise and attend meetings. But we might end up conducting it at the State or more local levels, for multiple reasons. First, we might encounter power issues if we have multiple treatment arms and a fixed N of 535. Second, only two policy areas have existing, well-defined evidence standards and associated studies (cf. below): education and labor policies. Depending on which specific policy we end up choosing, it might make substantially more sense to conduct the experiment at the local and state level. Third, it might be more realistic and easier to set meetings with legislators at the local level. Finally, there is a substantive interest as to whether state and local politics can help compensate for the shortcomings of the federal level, both in terms of quantity (gridlock) and quality (less polarized, more time to act). 
+Conducting the experiment at the federal level would be substantially interesting (we are using recent initiatives happening at the federal level as motivations for this project). It might also be logistically easier to organise and attend meetings at the federal level. But we might end up conducting it at the State or more local levels, for multiple reasons. First, we might encounter power issues if we have multiple treatment arms and a fixed N of 535 (see \nameref{sec:Power}). Second, only two policy areas have existing, well-defined evidence standards and associated studies: education and labor policies. If the policy we end up choosing is mostly conducted at the state and local level, it might make substantially more sense to conduct the experiment at this level. Finally, there is a substantive interest as to whether state and local politics can help compensate for the shortcomings of the federal level, both in terms of quantity (gridlock) and quality (less polarized, more time to act). 
 
 \section{Experimental analysis} \label{sec:analysis}
 
